# controllers/EstudianteController.js
@@ -1,4 +1,5 @@
 const { Estudiante } = require('../models'); // Importa los modelos necesarios
+const bcrypt = require('bcrypt');
 
 const getAllEstudiantes = async (req, res) => {
     try {
@@ -8,6 +9,25 @@ const getAllEstudiantes = async (req, res) => {
     catch (error) {
         console.log("Error al obtener los estudiantes");
         // return res.status(500).json({ error: error.message });
+    }
+}
+
+const createEstudiante = async (req, res) => {
+    try {
+        const password = req.body.password;
+        let estudiante;
+        bcrypt.genSalt(10, function (err, salt) {
+            bcrypt.hash(password, salt, async function (err, hash) {
+                req.body.password = hash;
+                req.body.salt = salt;
+                console.log("Creando estudiante");
+                estudiante = await Estudiante.create(req.body);
+                return estudiante;
+            });
+        });
+    } catch (error) {
+        console.log("Error al crear el estudiante");
+        return res.status(500).json({ error: error.message });
     }
 }
 const getEstudianteById = async (req, res) => {
@@ -25,13 +45,20 @@ const getEstudianteById = async (req, res) => {
         return res.status(500).json({ error: error.message });
     }
 }
-
-const createEstudiante = async (req, res) => {
+const getEstudianteByCorreo = async (req, res) => {
     try {
-        const estudiante = await Estudiante.create(req.body);
+        const { correo } = req.body;
+        if (correo == null) return res.status(400).json({ error: 'Correo no especificado.' });
+        console.log("Obteniendo estudiante por correo");
+        const estudiante = await Estudiante.findOne({
+            where: {
+                correo: correo
+            }
+        });
         return estudiante;
-    } catch (error) {
-        console.log("Error al crear el estudiante");
+    }
+    catch (error) {
+        console.log("Error al obtener el estudiante por correo");
         return res.status(500).json({ error: error.message });
     }
 }
@@ -39,5 +66,6 @@ const createEstudiante = async (req, res) => {
 module.exports = {
     getAllEstudiantes,
     createEstudiante,
-    getEstudianteById
+    getEstudianteById,
+    getEstudianteByCorreo
 }
