# models/admin.js
@@ -32,7 +32,7 @@ module.exports = (sequelize, DataTypes) => {
     telefono: { type: DataTypes.INTEGER, allowNull: false },
     cedula: { type: DataTypes.INTEGER, allowNull: false },
     password: { type: DataTypes.STRING, allowNull: false },
-    hash: { type: DataTypes.STRING, allowNull: false },
+    salt: { type: DataTypes.STRING, allowNull: false },
     fecha_registro: { type: DataTypes.DATE, allowNull: false, defaultValue: new Date() },
     direccion: { type: DataTypes.STRING, allowNull: false },
     id_estado: { type: DataTypes.INTEGER, allowNull: false },
