# models/estudiante.js
@@ -1,5 +1,4 @@
 'use strict';
-const bcrypt = require('bcrypt');
 const {
   Model
 } = require('sequelize');
@@ -46,7 +45,7 @@ module.exports = (sequelize, DataTypes) => {
       // },
       allowNull: false
     },
-    hash: { type: DataTypes.STRING, allowNull: false },
+    salt: { type: DataTypes.STRING, allowNull: false },
     fecha_registro: { type: DataTypes.DATE, allowNull: false },
     direccion: { type: DataTypes.STRING, allowNull: false },
     id_carrera: { type: DataTypes.INTEGER, allowNull: false },
@@ -61,6 +60,5 @@ module.exports = (sequelize, DataTypes) => {
     createdAt: false,
     modelName: 'Estudiante',
   });
-  sequelize.sync();
   return Estudiante;
 };
