# swagger-output.json
@@ -83,6 +83,23 @@
           "500": {
             "description": "Internal Server Error"
           }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "password": {
+                    "example": "any"
+                  },
+                  "salt": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
+          }
         }
       }
     },
@@ -120,6 +137,45 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "Endpoint para hacer login.",
+        "responses": {
+          "200": {
+            "description": "Login exitoso."
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "correo": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -426,7 +482,7 @@
             "type": "string",
             "example": "1234567890"
           },
-          "hash": {
+          "salt": {
             "type": "string",
             "example": "1234567890"
           },
@@ -469,7 +525,7 @@
           "telefono",
           "cedula",
           "password",
-          "hash",
+          "salt",
           "fecha_registro",
           "direccion",
           "id_carrera",
@@ -506,7 +562,7 @@
             "type": "string",
             "example": "1234567890"
           },
-          "hash": {
+          "salt": {
             "type": "string",
             "example": "1234567890"
           },
@@ -537,7 +593,7 @@
           "telefono",
           "cedula",
           "password",
-          "hash",
+          "salt",
           "fecha_registro",
           "direccion",
           "id_estado",
@@ -786,7 +842,7 @@
             "type": "string",
             "example": "1234567890"
           },
-          "hash": {
+          "salt": {
             "type": "string",
             "example": "1234567890"
           },
@@ -817,7 +873,7 @@
           "telefono",
           "cedula",
           "password",
-          "hash",
+          "salt",
           "fecha_registro",
           "direccion",
           "id_estado",
